--- a/documentation/Mod_Template/manifest.json
+++ b/documentation/Mod_Template/manifest.json
@@ -1,9 +1,9 @@
 {
-    "name": "MOD NAME GOES HERE",
-    "description": "MOD DESCRIPTION GOES HERE",
+    "name": "fortnite music",
+    "description": music from fortnite",
     "developer":
     {
-        "name": "DEVELOPER NAME GOES HERE"
+        "name": shadowledgend
     },
     "icons":
     {
@@ -17,10 +17,7 @@
         {
             "background_music":
             [
-                "music/track_1.mp3",
-                "music/track_2.mp3",
-                "music/track_3.mp3",
-                "music/track_4.mp3"
+              https://drive.google.com/file/d/1YzyM2dLDcVz5-UtTiIEffqAfMQtXHxMN/view?usp=drive_link
             ],
             "browser_sounds":
             {
